sql/yaml/SQL.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: mysql
# uncomment if needed
#   app.kubernetes.io/component: demo
#   app.kubernetes.io/instance: demo
 name: mysql
 namespace: flask-datastore
spec:
 # securityContext:
 #   allowPrivilegeEscalation: false
 replicas: 1
 selector:
   matchLabels:
     deployment: mysql
 template:
   metadata:
     labels:
       deployment: mysql
   spec:
     containers:
       - image: quay.io/rh-ee-jbrawley/mysql-demo:0d4a8b8
         imagePullPolicy: IfNotPresent
         name: mysql
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
             drop: ["ALL"]
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
