sql/yaml/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    deployment: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
