sql/yaml/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mysql-route
spec:
  host: mysql-svc.apps-crc.testing
  port:
    targetPort: 3306
  to:
    kind: Service
    name: mysql-svc
